fix routine
